db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: aagundis
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.27.0 (b0ed6a2c9)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.27.0 (b0ed6a2c9)
      creationTimestamp: null
      labels:
        io.kompose.service: db
    spec:
      containers:
        - env:
            - name: MYSQL_ALLOW_EMPTY_PASSWORD
              value: "true"
            - name: MYSQL_DATABASE
              value: demo
            - name: MYSQL_PASSWORD
              value: "1234"
            - name: MYSQL_ROOT_PASSWORD
              value: admin
            - name: MYSQL_USER
              value: admin
          image: mysql
          name: db
          ports:
            - containerPort: 3306
          resources: {}
      restartPolicy: Always
status: {}
