mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: aagundis
  name: mysql
spec:
  selector:
    matchLabels:
      env: db
  template:
    metadata:
      labels:
        env: db
    spec:
      containers:
      - image: aagundis/apimysql
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
