db-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: aagundis
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.27.0 (b0ed6a2c9)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  ports:
    - name: "9906"
      port: 9906
      targetPort: 3306
  selector:
    io.kompose.service: db
status:
  loadBalancer: {}
