mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: aagundis
  name: mysql
spec:
  type: NodePort
  ports:
  - targetPort: 3306
    port: 3306
    nodePort: 30008
  selector:
    env: db
