php-apache-environment-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: aagundis
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.27.0 (b0ed6a2c9)
  creationTimestamp: null
  labels:
    io.kompose.service: php-apache-environment
  name: php-apache-environment
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 80
  selector:
    io.kompose.service: php-apache-environment
status:
  loadBalancer: {}
