php-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: aagundis
    tier: backend
  name: php
  namespace: aagundis
spec:
  ports:
  - nodePort: 30007
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: aagundis
    tier: backend
  sessionAffinity: None
  type: NodePort
