ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: aagundis
    tier: backend
  namespace: aagundis
  name: php
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: php
            port:
              number: 80
